--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,7 @@
 html, body {
     width: 100%;
     height: 100%;
+    font-size: 20px;
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
